# commit-reporter

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
commit_digest/: git_utils.py  main.py  settings.py  summariser.py
commit_reporter/: file_writer.py  main.py  settings.py
